# games_library

./: CMakeLists.txt  README.md  example.py
app/: gamedisp.py
include/: game.h
src/C++/: game.cpp  gamewrapper.cpp  minesweeper_game.cpp
src/Python3/: example.py  gamedisp.py
